# sast-link-cxx-sdk

./: CMakeLists.txt  CMakePresets.json  README.md  README_zh.md  vcpkg.json
example/: CMakeLists.txt  main.cc
include/: sast_link.h
src/: lib.cc  main.cc
src/Controller/: CMakeLists.txt  LoginController.cc
src/Controller/include/Controller/: LoginController.h
src/Network/: CMakeLists.txt  HttpServer.cc
src/Network/include/Network/: HttpServer.h
src/details/: CMakeLists.txt  HttpServer.cc  LoginController.cc
src/details/include/Controller/: LoginController.h
src/details/include/Network/: HttpServer.h
